@@ -18,6 +18,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #19138: doctest's IGNORE_EXCEPTION_DETAIL now allows a match when
+  no exception detail exists (no colon following the exception's name, or
+  a colon does follow but no text follows the colon).
+
 - Issue #19827: On UNIX, setblocking() and settimeout() methods of
   socket.socket can now avoid a second syscall if the ioctl() function can be
   used, or if the non-blocking flag of the socket is unchanged.
